--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required (VERSION 3.10)
 
 project (retrograde)
 
+add_subdirectory(test_cores)
+
 set(HALLEY_PROJECT_EMBED 1)
 set(HALLEY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/halley)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${HALLEY_PATH}/cmake/")
@@ -16,6 +18,10 @@ set (SOURCES
 	
 	"src/game/retrograde_game.cpp"
 	"src/game/game_stage.cpp"
+
+	"src/libretro/libretro_core.cpp"
+
+	"src/util/dll.cpp"
 	)
 
 set (HEADERS
@@ -23,6 +29,11 @@ set (HEADERS
 	
 	"src/game/retrograde_game.h"
 	"src/game/game_stage.h"
+
+	"src/libretro/libretro_core.h"
+	"src/libretro/libretro.h"
+
+	"src/util/dll.h"
 	)
 
 set (GEN_DEFINITIONS
