--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set (SOURCES
 	"src/libretro/libretro_core.cpp"
 	"src/libretro/libretro_environment.cpp"
 
+	"src/util/cpu_update_texture.cpp"
 	"src/util/dll.cpp"
 	)
 
@@ -35,6 +36,7 @@ set (HEADERS
 	"src/libretro/libretro_environment.h"
 	"src/libretro/libretro.h"
 
+	"src/util/cpu_update_texture.h"
 	"src/util/dll.h"
 	)
 
