--- a/assets_src/config/db/systems.yaml
+++ b/assets_src/config/db/systems.yaml
@@ -60,3 +60,8 @@ systems:
       - name: Game Boy Color
         region: [world]
     cores: [gambatte]
+  - id: nds
+    regions:
+      - name: Nintendo DS
+        region: [world]
+    cores: [desmume]
