Some more systems, and delay loading of core

--- a/assets_src/config/db/cores.yaml
+++ b/assets_src/config/db/cores.yaml
@@ -12,3 +12,7 @@ cores:
   - id: gambatte
   - id: mednafen_gba
   - id: desmume
+  - id: kronos
+  - id: mednafen_saturn
+  - id: pcsx2
+  - id: dolphin
