Setup the structure for parsing retroarch shaders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ set (SOURCES
 	"src/config/system_config.cpp"
 
 	"src/filter_chain/retroarch_filter_chain.cpp"
+	"src/filter_chain/retroarch_shader_parser.cpp"
+	"src/filter_chain/shader_converter.cpp"
 
 	"src/game/game_stage.cpp"
 	"src/game/retrograde_environment.cpp"
@@ -52,6 +54,8 @@ set (HEADERS
 
 	"src/filter_chain/filter_chain.h"
 	"src/filter_chain/retroarch_filter_chain.h"
+	"src/filter_chain/retroarch_shader_parser.h"
+	"src/filter_chain/shader_converter.h"
 
 	"src/game/game_stage.h"
 	"src/game/retrograde_environment.h"
