Successfully converting Retroarch -> GLSL -> HLSL... now to make sure it's sane and usable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,24 @@ set (HEADERS
 
 	"src/contrib/glslang/include/glslang_c_interface.h"
 	"src/contrib/glslang/include/glslang_c_shader_types.h"
+
+	"src/contrib/spirv_cross/GLSL.std.450.h"
+	"src/contrib/spirv_cross/spirv_cfg.hpp"
+	"src/contrib/spirv_cross/spirv_common.hpp"
+	"src/contrib/spirv_cross/spirv_cpp.hpp"
+	"src/contrib/spirv_cross/spirv_cross_c.h"
+	"src/contrib/spirv_cross/spirv_cross_containers.hpp"
+	"src/contrib/spirv_cross/spirv_cross_error_handling.hpp"
+	"src/contrib/spirv_cross/spirv_cross_parsed_ir.hpp"
+	"src/contrib/spirv_cross/spirv_cross_util.hpp"
+	"src/contrib/spirv_cross/spirv_cross.hpp"
+	"src/contrib/spirv_cross/spirv_glsl.hpp"
+	"src/contrib/spirv_cross/spirv_hlsl.hpp"
+	"src/contrib/spirv_cross/spirv_msl.hpp"
+	"src/contrib/spirv_cross/spirv_parser.hpp"
+	"src/contrib/spirv_cross/spirv_reflect.hpp"
+	"src/contrib/spirv_cross/spirv.h"
+	"src/contrib/spirv_cross/spirv.hpp"
 	
 	"src/config/core_config.h"
 	"src/config/system_config.h"
@@ -100,6 +118,12 @@ target_link_libraries(retrograde-game
 	optimized "${CMAKE_CURRENT_SOURCE_DIR}/lib/GenericCodeGen.lib"
 	optimized "${CMAKE_CURRENT_SOURCE_DIR}/lib/MachineIndependent.lib"
 	optimized "${CMAKE_CURRENT_SOURCE_DIR}/lib/glslang.lib"
+	optimized "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-cpp.lib"
+	optimized "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-core.lib"
+	optimized "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-glsl.lib"
+	optimized "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-hlsl.lib"
+	optimized "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-reflect.lib"
+	optimized "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-util.lib"
 	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/SPIRV-Tools-optd.lib"
 	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/SPIRV-Toolsd.lib"
 	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/SPIRVd.lib"
@@ -109,4 +133,10 @@ target_link_libraries(retrograde-game
 	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/GenericCodeGend.lib"
 	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/MachineIndependentd.lib"
 	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/glslangd.lib"
+	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-cppd.lib"
+	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-cored.lib"
+	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-glsld.lib"
+	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-hlsld.lib"
+	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-reflectd.lib"
+	debug "${CMAKE_CURRENT_SOURCE_DIR}/lib/spirv-cross-utild.lib"
 )
