Mostly implement perf interface

--- a/assets_src/config/db/cores.yaml
+++ b/assets_src/config/db/cores.yaml
@@ -13,6 +13,8 @@ cores:
   - id: mednafen_gba
   - id: desmume
   - id: kronos
+    options:
+      kronos_videocoretype: opengl_cs
   - id: mednafen_saturn
   - id: pcsx2
   - id: dolphin
