Audio fix for cores that provide a sample at a time and implement core assets dir env callback

--- a/assets_src/config/db/cores.yaml
+++ b/assets_src/config/db/cores.yaml
@@ -17,5 +17,9 @@ cores:
       kronos_videocoretype: opengl_cs
   - id: mednafen_saturn
   - id: pcsx2
+    options:
+      pcsx2_renderer: D3D11
   - id: dolphin
+    options:
+      dolphin_renderer: Hardware
   - id: mupen64plus_next
