Bezels working, though there's something wrong with mipmap generation

--- a/assets_src/config/db/systems.yaml
+++ b/assets_src/config/db/systems.yaml
@@ -74,7 +74,7 @@ systems:
     screenFilters:
     - lcd-gameboy-color
     bezels:
-    - gameboy-colour
+    - gameboy-color
   - id: gba
     regions:
       - name: Game Boy Advance
