--- a/assets_src/config/db/bezels.yaml
+++ b/assets_src/config/db/bezels.yaml
@@ -1,21 +1,33 @@
 bezels:
   - id: gameboy
     images:
+    - image: bezels/dmg-bg.png
+      displayCentre: [85, 78]
+      baseScale: 1
+      layer: background
     - image: bezels/dmg-border-square-4x.png
       displayCentre: [3200, 1600]
       baseScale: 4
+      layer: foreground
   - id: gameboy-pocket
     images:
+    - image: bezels/pocket-bg.png
+      displayCentre: [85, 78]
+      baseScale: 1
+      layer: background
     - image: bezels/pocket-border-square-4x.png
       displayCentre: [3200, 1600]
       baseScale: 4
+      layer: foreground
   - id: gameboy-color
     images:
     - image: bezels/color-border-square-4x.png
       displayCentre: [3200, 1600]
       baseScale: 4
+      layer: foreground
   - id: gameboy-advance
     images:
     - image: bezels/gba-border-square-8x.png
       displayCentre: [3200, 1600]
       baseScale: 8
+      layer: foreground
