Fix some more filter chain stuff

--- a/assets_src/config/db/systems.yaml
+++ b/assets_src/config/db/systems.yaml
@@ -6,8 +6,7 @@ systems:
     cores: [stella]
     manufacturer: Atari
     releaseDate: 1977-09-11
-    screenFilters:
-    - crt-rf-3phase
+    screenFilters: [crt-rf-3phase]
 
   - id: nes
     regions: 
@@ -18,8 +17,7 @@ systems:
     cores: [nestopia, mesen]
     manufacturer: Nintendo
     releaseDate: 1983-07-15
-    screenFilters:
-    - crt-composite-ntsc-3phase
+    screenFilters: [crt-composite-ntsc-3phase]
   - id: snes
     regions: 
       - name: Super Nintendo Entertainment System
@@ -29,8 +27,7 @@ systems:
     cores: [snes9x, bsnes]
     manufacturer: Nintendo
     releaseDate: 1990-11-21
-    screenFilters:
-    - crt-composite-ntsc-3phase
+    screenFilters: [crt-composite-ntsc-3phase]
   - id: n64
     regions:
       - name: Nintendo 64
@@ -38,8 +35,7 @@ systems:
     cores: [mupen64plus_next, parallel_n64]
     manufacturer: Nintendo
     releaseDate: 1996-06-23
-    screenFilters:
-    - crt-svideo
+    screenFilters: [crt-svideo]
   - id: gamecube
     regions:
       - name: GameCube
@@ -47,8 +43,7 @@ systems:
     cores: [dolphin]
     manufacturer: Nintendo
     releaseDate: 2001-09-14
-    screenFilters:
-    - crt-svideo
+    screenFilters: [crt-svideo]
 
   - id: gb
     regions:
@@ -57,13 +52,8 @@ systems:
     cores: [gambatte]
     manufacturer: Nintendo
     releaseDate: 1989-04-21
-    screenFilters:
-    - lcd-gameboy-pocket
-    - lcd-gameboy
-    - lcd-gameboy-color
-    bezels:
-    - gameboy-pocket
-    - gameboy
+    screenFilters: [lcd-gameboy-pocket, lcd-gameboy, lcd-gameboy-color]
+    bezels: [gameboy-pocket, gameboy]
   - id: gbc
     regions:
       - name: Game Boy Color
@@ -71,10 +61,8 @@ systems:
     cores: [gambatte]
     manufacturer: Nintendo
     releaseDate: 1998-10-21
-    screenFilters:
-    - lcd-gameboy-color
-    bezels:
-    - gameboy-color
+    screenFilters: [lcd-gameboy-color]
+    bezels: [gameboy-color]
   - id: gba
     regions:
       - name: Game Boy Advance
@@ -82,10 +70,8 @@ systems:
     cores: [mgba, mednafen_gba]
     manufacturer: Nintendo
     releaseDate: 2001-03-21
-    screenFilters:
-    - lcd-gameboy-advance
-    bezels:
-    - gameboy-advance
+    screenFilters: [lcd-gameboy-advance]
+    bezels: [gameboy-advance]
   - id: nds
     regions:
       - name: Nintendo DS
@@ -93,8 +79,7 @@ systems:
     cores: [desmume]
     manufacturer: Nintendo
     releaseDate: 2004-11-21
-    screenFilters:
-    - lcd-ds
+    screenFilters: [lcd-ds]
 
   - id: mastersystem
     regions:
@@ -103,8 +88,7 @@ systems:
     cores: [genesis_plus_gx]
     manufacturer: Sega
     releaseDate: 1985-10-20
-    screenFilters:
-    - crt-composite-ntsc-3phase
+    screenFilters: [crt-composite-ntsc-3phase]
   - id: megadrive
     regions:
       - name: Mega Drive
@@ -114,9 +98,7 @@ systems:
     cores: [genesis_plus_gx]
     manufacturer: Sega
     releaseDate: 1988-10-29
-    screenFilters:
-    - crt-composite-ntsc-2phase-megadrive
-    - crt-composite-ntsc-2phase
+    screenFilters: [crt-composite-ntsc-2phase-megadrive, crt-composite-ntsc-2phase]
   - id: megacd
     regions:
       - name: Mega CD
@@ -126,8 +108,7 @@ systems:
     cores: [genesis_plus_gx]
     manufacturer: Sega
     releaseDate: 1991-12-12
-    screenFilters:
-    - crt-composite-ntsc-2phase
+    screenFilters: [crt-composite-ntsc-2phase-megadrive, crt-composite-ntsc-2phase]
   - id: saturn
     regions:
       - name: Saturn
@@ -135,8 +116,7 @@ systems:
     cores: [mednafen_saturn]
     manufacturer: Sega
     releaseDate: 1994-11-22
-    screenFilters:
-    - crt-svideo
+    screenFilters: [crt-svideo]
 
   - id: gamegear
     regions:
@@ -145,8 +125,7 @@ systems:
     cores: [genesis_plus_gx]
     manufacturer: Sega
     releaseDate: 1990-10-06
-    screenFilters:
-    - lcd-grid
+    screenFilters: [lcd-grid]
 
   - id: psx
     regions:
@@ -155,8 +134,7 @@ systems:
     cores: [swanstation]
     manufacturer: Sony
     releaseDate: 1994-12-03
-    screenFilters:
-    - crt-svideo
+    screenFilters: [crt-svideo]
   - id: ps2
     regions:
       - name: PlayStation 2
@@ -164,8 +142,7 @@ systems:
     cores: [pcsx2]
     manufacturer: Sony
     releaseDate: 2000-03-04
-    screenFilters:
-    - crt-svideo
+    screenFilters: [crt-svideo]
 
   - id: neogeo
     regions:
@@ -174,8 +151,7 @@ systems:
     cores: [fbneo]
     manufacturer: SNK
     releaseDate: 1990-04-26
-    screenFilters:
-    - crt-rgb
+    screenFilters: [crt-rgb]
   - id: cps1
     regions:
       - name: CP System I
@@ -183,8 +159,7 @@ systems:
     cores: [fbneo]
     manufacturer: Capcom
     releaseDate: 1988-05-13
-    screenFilters:
-    - crt-rgb
+    screenFilters: [crt-rgb]
   - id: cps2
     regions:
       - name: CP System II
@@ -192,8 +167,7 @@ systems:
     cores: [fbneo]
     manufacturer: Capcom
     releaseDate: 1993-09-10
-    screenFilters:
-    - crt-rgb
+    screenFilters: [crt-rgb]
   - id: cps3
     regions:
       - name: CP System III
@@ -201,5 +175,4 @@ systems:
     cores: [fbneo]
     manufacturer: Capcom
     releaseDate: 1996-10-23
-    screenFilters:
-    - crt-rgb
+    screenFilters: [crt-rgb]
