Stub for game collection scanning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ set (SOURCES
 	"src/libretro/libretro_core.cpp"
 	"src/libretro/libretro_vfs.cpp"
 
+	"src/metadata/game_collection.cpp"
+
 	"src/retrograde/game_stage.cpp"
 	"src/retrograde/retrograde_environment.cpp"
 	"src/retrograde/retrograde_game.cpp"
@@ -98,6 +100,8 @@ set (HEADERS
 	"src/libretro/libretro.h"
 	"src/libretro/libretro_d3d.h"
 	"src/libretro/libretro_vulkan.h"
+
+	"src/metadata/game_collection.h"
 
 	"src/retrograde/game_stage.h"
 	"src/retrograde/retrograde_environment.h"
