Enumerate and combine games, and pick best extension to start from

--- a/assets_src/config/db/cores.yaml
+++ b/assets_src/config/db/cores.yaml
@@ -21,6 +21,7 @@ cores:
   - id: pcsx2
     options:
       pcsx2_renderer: D3D11
+    blockedExtensions: [cue]
   - id: dolphin
     options:
       dolphin_renderer: Hardware
