--- a/assets_src/config/db/systems.yaml
+++ b/assets_src/config/db/systems.yaml
@@ -6,6 +6,7 @@ systems:
     cores: [stella]
     manufacturer: Atari
     releaseDate: 1977-09-11
+    generation: 2
     screenFilters: [crt-rf-3phase]
 
   - id: nes
@@ -17,6 +18,7 @@ systems:
     cores: [nestopia, mesen]
     manufacturer: Nintendo
     releaseDate: 1983-07-15
+    generation: 3
     screenFilters: [crt-composite-ntsc-3phase]
   - id: snes
     regions: 
@@ -27,6 +29,7 @@ systems:
     cores: [snes9x, bsnes]
     manufacturer: Nintendo
     releaseDate: 1990-11-21
+    generation: 4
     screenFilters: [crt-composite-ntsc-3phase]
   - id: n64
     regions:
@@ -35,6 +38,7 @@ systems:
     cores: [mupen64plus_next, parallel_n64]
     manufacturer: Nintendo
     releaseDate: 1996-06-23
+    generation: 5
     screenFilters: [crt-svideo]
   - id: gamecube
     regions:
@@ -43,6 +47,7 @@ systems:
     cores: [dolphin]
     manufacturer: Nintendo
     releaseDate: 2001-09-14
+    generation: 6
     screenFilters: [crt-svideo]
 
   - id: gb
@@ -52,6 +57,7 @@ systems:
     cores: [gambatte]
     manufacturer: Nintendo
     releaseDate: 1989-04-21
+    generation: 4
     screenFilters: [lcd-gameboy-pocket, lcd-gameboy, lcd-gameboy-color]
     bezels: [gameboy-pocket, gameboy]
   - id: gbc
@@ -61,6 +67,7 @@ systems:
     cores: [gambatte]
     manufacturer: Nintendo
     releaseDate: 1998-10-21
+    generation: 5
     screenFilters: [lcd-gameboy-color]
     bezels: [gameboy-color]
   - id: gba
@@ -70,6 +77,7 @@ systems:
     cores: [mgba, mednafen_gba]
     manufacturer: Nintendo
     releaseDate: 2001-03-21
+    generation: 6
     screenFilters: [lcd-gameboy-advance]
     bezels: [gameboy-advance]
   - id: nds
@@ -79,6 +87,7 @@ systems:
     cores: [melonds, desmume]
     manufacturer: Nintendo
     releaseDate: 2004-11-21
+    generation: 7
     screenFilters: [lcd-ds]
     bezels: [ndsi]
 
@@ -89,6 +98,7 @@ systems:
     cores: [genesis_plus_gx]
     manufacturer: Sega
     releaseDate: 1985-10-20
+    generation: 3
     screenFilters: [crt-composite-ntsc-3phase]
   - id: megadrive
     regions:
@@ -99,6 +109,7 @@ systems:
     cores: [genesis_plus_gx]
     manufacturer: Sega
     releaseDate: 1988-10-29
+    generation: 4
     screenFilters: [crt-composite-ntsc-2phase-megadrive, crt-composite-ntsc-2phase]
   - id: megacd
     regions:
@@ -109,6 +120,7 @@ systems:
     cores: [genesis_plus_gx]
     manufacturer: Sega
     releaseDate: 1991-12-12
+    generation: 4
     screenFilters: [crt-composite-ntsc-2phase-megadrive, crt-composite-ntsc-2phase]
   - id: saturn
     regions:
@@ -117,6 +129,7 @@ systems:
     cores: [mednafen_saturn]
     manufacturer: Sega
     releaseDate: 1994-11-22
+    generation: 5
     screenFilters: [crt-svideo]
 
   - id: gamegear
@@ -126,6 +139,7 @@ systems:
     cores: [genesis_plus_gx]
     manufacturer: Sega
     releaseDate: 1990-10-06
+    generation: 4
     screenFilters: [lcd-grid]
 
   - id: psx
@@ -135,6 +149,7 @@ systems:
     cores: [swanstation]
     manufacturer: Sony
     releaseDate: 1994-12-03
+    generation: 5
     screenFilters: [crt-svideo]
   - id: ps2
     regions:
@@ -143,6 +158,7 @@ systems:
     cores: [pcsx2]
     manufacturer: Sony
     releaseDate: 2000-03-04
+    generation: 6
     screenFilters: [crt-svideo]
 
   - id: neogeo
@@ -152,6 +168,7 @@ systems:
     cores: [fbneo]
     manufacturer: SNK
     releaseDate: 1990-04-26
+    generation: 4
     screenFilters: [crt-rgb]
   - id: cps1
     regions:
@@ -160,6 +177,7 @@ systems:
     cores: [fbneo]
     manufacturer: Capcom
     releaseDate: 1988-05-13
+    generation: 4
     screenFilters: [crt-rgb]
   - id: cps2
     regions:
@@ -168,6 +186,7 @@ systems:
     cores: [fbneo]
     manufacturer: Capcom
     releaseDate: 1993-09-10
+    generation: 4
     screenFilters: [crt-rgb]
   - id: cps3
     regions:
@@ -176,4 +195,5 @@ systems:
     cores: [fbneo]
     manufacturer: Capcom
     releaseDate: 1996-10-23
+    generation: 4
     screenFilters: [crt-rgb]
