Basic UX implemenetation on system select UI

--- a/assets_src/ui/choose_game.yaml
+++ b/assets_src/ui/choose_game.yaml
@@ -6,6 +6,7 @@ widget:
   class: widget
 children:
   - uuid: 26a873e6-7cb7-40ef-8c83-0a51bda64cca
+    proportion: 1
     sizer:
       columnProportions: []
       type: vertical
