--- a/assets_src/ui/choose_system.yaml
+++ b/assets_src/ui/choose_system.yaml
@@ -5,6 +5,7 @@ widget:
   class: widget
 children:
   - uuid: 26a873e6-7cb7-40ef-8c83-0a51bda64cca
+    proportion: 1
     sizer:
       columnProportions: []
       type: vertical
@@ -19,6 +20,7 @@ children:
           columnProportions: []
         widget:
           class: list
-          id: systemList
+          id: systemCategoryList
           options: []
           size: [0, 0]
+          style: blankList
