--- a/assets_src/config/strings/retrograde-en-GB.yaml
+++ b/assets_src/config/strings/retrograde-en-GB.yaml
@@ -1,14 +1,14 @@
 ---
 
 en-GB:
-  gen1: 1st Generation
-  gen2: 2nd Generation
-  gen3: 3rd Generation
-  gen4: 4th Generation
-  gen5: 5th Generation
-  gen6: 6th Generation
-  gen7: 7th Generation
-  gen8: 8th Generation
-  gen9: 9th Generation
+  gen1: 1st Generation (1972-1980)
+  gen2: 2nd Generation (1976-1992)
+  gen3: 3rd Generation (1983-2003)
+  gen4: 4th Generation (1987-2004)
+  gen5: 5th Generation (1993-2006)
+  gen6: 6th Generation (1998-2013)
+  gen7: 7th Generation (2005-2017)
+  gen8: 8th Generation (2012-present)
+  gen9: 9th Generation (2020-present)
 
 ...
