--- a/assets_src/ui/choose_system.yaml
+++ b/assets_src/ui/choose_system.yaml
@@ -6,6 +6,7 @@ widget:
 children:
   - uuid: 26a873e6-7cb7-40ef-8c83-0a51bda64cca
     proportion: 1
+    border: [20, 600, 20, 20]
     sizer:
       columnProportions: []
       type: vertical
